[gd_scene load_steps=9 format=2]

[ext_resource path="res://BallEng.gd" type="Script" id=1]
[ext_resource path="res://Imagenes/vippng.com-balloon-png-400037.png" type="Texture" id=2]
[ext_resource path="res://Imagenes/imgonline-com-ua-ReplaceColor-T47bVLNncXif5iW-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Poppins-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 70.5584

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "azul",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "azul_select",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 78
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=4]
radius = 393.387

[node name="BallEng" type="RigidBody2D"]
z_index = -2
z_as_relative = false
gravity_scale = -1.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 481.158, 401.289 )
shape = SubResource( 1 )

[node name="AnimatedSpriteEng" type="AnimatedSprite" parent="."]
position = Vector2( 481.537, 407.779 )
scale = Vector2( 0.178, 0.142 )
frames = SubResource( 2 )
animation = "azul"

[node name="LabelEng" type="Label" parent="AnimatedSpriteEng"]
margin_left = -263.0
margin_top = -328.0
margin_right = 250.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="Area2D" type="Area2D" parent="AnimatedSpriteEng"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSpriteEng/Area2D"]
position = Vector2( 21.8882, -27.437 )
shape = SubResource( 4 )

[connection signal="input_event" from="AnimatedSpriteEng/Area2D" to="." method="_on_Area2DEng_input_event"]
